# agentbox

./: .env.dreamlab-additions  .env.example  .env.solid-pods.example  .env.solid-pods.template  .env.template  .env.template.common  .env.template.oci  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Dockerfile.solid-pod  MAINTAINERS.md  NOTICE  README.md  REBUILD-BRIEF.md  agentbox.sh  agentbox.toml  docker-compose.browsercontainer.yml  docker-compose.override.yml  docker-compose.solid-pods.yml  docker-compose.xr-runtime.yml  docker-compose.yml  flake.nix  package-lock.json  package.json  renovate.json
.devcontainer/: README.md  devcontainer.json
.github/workflows/: build-multi-arch.yml  ci.yml  contract-tests.yml  docs-ci.yml  flake-check.yml  image-scan.yml  invariants.yml  manifest-validate.yml  nix-flake-update.yml  release.yml  runtime-contract.yml  secret-scan.yml  shellcheck.yml  tui-tests.yml
agents/: auto-consultant.md
aisp/: benchmark.js  cli.js  index.js  init-aisp.sh  package.json
browsercontainer/: Dockerfile  README.md  cdp-diagnose.js  healthcheck.sh  launch-chromium.sh  package.json  server.js  supervisord.conf
claude-zai/: Dockerfile  claude-config.json
claude-zai/wrapper/: package-lock.json  package.json  server.js
config/: agentbox-aliases.sh  artifact-probes.json  bashrc.agentbox  claude-flow-config.json  config.fish  entrypoint-unified.sh  hyprland.conf  init-ruvector-schema.sql  init-ruvector.sql  seal-bootstrap.sh  seccomp-agentbox.json  starship.toml  supervisord-nix.conf  supervisord.conf  supervisord.solid-pod.conf  tmux-autostart.sh  tmux.conf  turbo-flow-aliases.sh  validate-artifacts.sh  zai-wrapper.sh  zellij.kdl
config/hooks/: claude-flow-hook-adapter.cjs  nostr-live-mirror.cjs  nostr-session-summary.py  project-tracking-publish.cjs
config/i3/: config
crates/headroom-napi/: Cargo.toml
crates/headroom-napi/src/: ccr_store.rs  content_router.rs  diff_compressor.rs  lib.rs  log_compressor.rs  smart_crusher.rs  types.rs
docs/: README.md
docs/adr/: ADR-001-nixos-flakes-architecture.md  ADR-001-nixos-flakes.md  ADR-002-ruvector-standalone.md  ADR-002-skill-categorization.md  ADR-003-gpu-removal.md  ADR-004-upstream-sync.md  ADR-005-pluggable-adapter-architecture.md  ADR-006-immutable-runtime-bootstrap.md  ADR-007-runtime-contract-and-container-hardening.md
docs/architecture/: native-pod-mesh.md
docs/ddd/: DDD-001-immutable-bootstrap-domain.md  DDD-002-runtime-contract-domain.md
docs/developer/: adapters.md  agent-control-surface-panels.md  (+13 more)
https-bridge/: https-proxy.js  package.json
lib/: 3dgs-stack.nix  claude-code-binary.nix  codex-binary.nix  gpu-backend.nix  headroom-compress.nix  linked-data-contexts.nix  linkedobjects-browser.nix  nagual-qe.nix  nostr-pod-bridge.nix  npm-cli.nix  npm-services.nix  solid-pod-rs.cargo-lock  solid-pod-rs.nix
management-api/: COMFYUI_INTEGRATION.md  README.md  package-lock.json  package.json  server-comfyui-integration.patch.js  server.js
mcp/: README.md  mcp-full-registry.json  mcp.json  package-lock.json  package.json
ontology/: code-harness.ttl
schema/: agentbox.toml.schema.json
scripts/: _get-nodemods-hash.nix  agentbox  agentbox-config-validate.js  agentbox-config-validate.sh  bump-npm-cli-versions.sh  check-upstream-releases.sh  cloud-init.yaml  connect-all.sh  connect-browser.sh  connect-vnc.sh  ontology-condense-refresh.sh  opf-router.py  post-deploy-cleanup.sh  prefetch-hashes.sh  provision-agent-stacks.py  provision-bare.sh  provision-fly.sh  provision-hetzner.sh  provision-oci.sh  qgis_mcp_standalone.py  run-junkiejarvis.cjs  run-per-user-agent.cjs  skills-entrypoint.sh  solid-pod-server.py  sovereign-bootstrap.py  start-agentbox.sh  sync-fixtures.sh  tui-read-manifest.py  tui-write-manifest.py  zellij-stack.sh
services/nostr-pod-bridge/: Cargo.toml
services/nostr-pod-bridge/src/: lib.rs  main.rs
setup/server/: Cargo.toml
setup/server/src/: main.rs
skills/: SKILL-DIRECTORY.md  env.sample  mcp.json
skills/wasm-js/templates/voronoi-graphics/: Cargo.toml  build.sh  integration.tsx
skills/wasm-js/templates/voronoi-graphics/src/: lib.rs
xr-runtime/: Dockerfile  README.md  build-gdext.sh  healthcheck.sh  launch-godot.sh  launch-monado.sh  supervisord.conf
(+754 files in other folders)
