[package]
name = "agentbox-setup"
version = "0.1.0"
edition = "2021"
description = "Agentbox configuration wizard — local HTTP server + browser UI"

[[bin]]
name = "agentbox-setup"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
open = "5"
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
