[package]
name = "voronoi-graphics"
version = "0.1.0"
edition = "2021"
description = "High-performance Voronoi/Delaunay graphics computation for web"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# Error handling in WASM
console_error_panic_hook = { version = "0.1", optional = true }

# For performance profiling (optional)
# web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size - critical for web delivery
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
